[package]
name = "cargo-docco"
version = "0.1.0"
authors = ["creativcoder <creativcoders@gmail.com>"]
edition = "2018"
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
]
keywords = [
    "cli",
    "cargo",
    "crates",
    "dependencies",
    "cargo-subcommand",
]
license = "Apache-2.0/MIT"

[dependencies]
structopt = "0.3.20"
rocco = { path = "/home/creativcoder/projects/rocco" }
anyhow = "1.0.33"

[[bin]]
name = "cargo-docco"
path="src/main.rs"
